--- a/01_di/android/app/src/main/AndroidManifest.xml
+++ b/01_di/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="${usesCleartextTraffic}">
         <activity
-            android:name=".ui.AppActivity"
+            android:name=".activity.AppActivity"
             android:exported="true">
             <nav-graph android:value="@navigation/nav_main" />
 
