--- a/01_di/android/app/build.gradle
+++ b/01_di/android/app/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation"androidx.paging:paging-runtime-ktx:3.1.1"
+    implementation"androidx.room:room-paging:2.4.3"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
